# snowflake_tpch

./: .env.local  .gitignore  AGENTS.md  README.md  dagster_cloud.yaml  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
.github/workflows/: branch_deployments.yml  deploy.yml
dbt/: profiles.yml
dbt/macros/: discounting.sql
dbt/models/marts/: fct_orders.sql
dbt/models/staging/tpch/: stg_tpch_line_items.sql
models/marts/: fct_orders.yml  int_order_items.sql  int_order_items_summary.sql
models/staging/tpch/: stg_tpch_orders.sql  tpch.yml
snowflake_tpch/: pyproject.toml  setup.py
snowflake_tpch/snowflake_tpch/: assets.py  definitions.py  project.py  schedules.py
snowflake_tpch/tests/: test_dagster_config.py
src/snowflake_tpch/: project.py  schedules.py
tests/: fct_orders_discount.sql  schema.yml
